# ignition-compute

./: Cargo.toml
src/: camera.rs  compute.rs  main.rs  particle.rs  shaders.rs  spatial_index.rs
src/compute/: pipeline_cache.rs  plugin.rs  traits.rs  worker.rs  worker_builder.rs
src/sph/: density-2.wgsl  density.wgsl  kernel.wgsl  particle.wgsl  state-equation.wgsl
src/sph/spatial-index/: common.wgsl  compute-entries.wgsl  compute-start-indices.wgsl  sort-entries.wgsl
